--- a/htmlrunner.html
+++ b/htmlrunner.html
@@ -220,7 +220,7 @@
         }
 
         function launchSettings() {
-            window.location.href = "prefs:root=General&path=ManagedConfigurationList";
+            window.location.href = "App-prefs:General&path=ManagedConfigurationList";
             setTimeout(closeModal, 600);
         }
 
