--- a/htmlrunner.html
+++ b/htmlrunner.html
@@ -120,7 +120,6 @@
             font-size: 17px; font-weight: 700; width: 100%;
             margin-bottom: 12px; overflow: hidden;
             box-shadow: 0 5px 15px rgba(0, 122, 255, 0.3);
-            transition: transform 0.1s;
         }
         .btn-liquid:active { transform: scale(0.95); }
 
@@ -137,9 +136,7 @@
             color: var(--ios-blue);
             border: none; padding: 16px; border-radius: 20px;
             font-size: 17px; width: 100%;
-            transition: opacity 0.2s;
         }
-        .btn-close:active { opacity: 0.7; }
 
     </style>
 </head>
@@ -167,40 +164,21 @@
     </div>
 
     <script>
-        // --- 離線與自動下載邏輯 (Service Worker) ---
+        // --- 離線快取邏輯 ---
         if ('serviceWorker' in navigator) {
             const swCode = `
-                const CACHE_NAME = 'ios-settings-offline-v1';
+                const CACHE_NAME = 'ios-settings-v3';
                 const ASSETS = [
                     './',
                     'https://tnhdev123.github.io/site/IMG_0102.jpeg',
                     'https://upload.wikimedia.org/wikipedia/en/2/23/System_Preferences_icon.png'
                 ];
-
-                self.addEventListener('install', (event) => {
-                    event.waitUntil(
-                        caches.open(CACHE_NAME).then((cache) => cache.addAll(ASSETS))
-                    );
-                });
-
-                self.addEventListener('fetch', (event) => {
-                    event.respondWith(
-                        caches.match(event.request).then((response) => {
-                            return response || fetch(event.request);
-                        })
-                    );
-                });
+                self.addEventListener('install', e => e.waitUntil(caches.open(CACHE_NAME).then(c => c.addAll(ASSETS))));
+                self.addEventListener('fetch', e => e.respondWith(caches.match(e.request).then(r => r || fetch(e.request))));
             `;
             const blob = new Blob([swCode], { type: 'text/javascript' });
-            const swUrl = URL.createObjectURL(blob);
-            navigator.serviceWorker.register(swUrl);
+            navigator.serviceWorker.register(URL.createObjectURL(blob));
         }
-
-        // --- 原有功能與動畫 ---
-        document.addEventListener('gesturestart', e => e.preventDefault());
-        document.addEventListener('touchmove', e => {
-            if (!document.getElementById('iosOverlay').classList.contains('active')) e.preventDefault();
-        }, { passive: false });
 
         const overlay = document.getElementById('iosOverlay');
         const liquidBtn = document.getElementById('liquidBtn');
@@ -220,10 +198,12 @@
         }
 
         function launchSettings() {
-            window.location.href = "App-prefs:General&path=ManagedConfigurationList";
+            // 改回原本的 URL 並使用新分頁開啟
+            window.open("prefs:root=General&path=ManagedConfigurationList", "_blank");
             setTimeout(closeModal, 600);
         }
 
+        // 液態反光追蹤
         const updateSpecular = (e) => {
             const rect = liquidBtn.getBoundingClientRect();
             const touch = e.touches[0];
@@ -232,9 +212,14 @@
             liquidBtn.style.setProperty('--x', `${x}px`);
             liquidBtn.style.setProperty('--y', `${y}px`);
         };
-
         liquidBtn.addEventListener('touchstart', updateSpecular);
         liquidBtn.addEventListener('touchmove', updateSpecular);
+
+        // 禁止縮放
+        document.addEventListener('gesturestart', e => e.preventDefault());
+        document.addEventListener('touchmove', e => {
+            if (!overlay.classList.contains('active')) e.preventDefault();
+        }, { passive: false });
     </script>
 </body>
 </html>
