--- a/htmlrunner.html
+++ b/htmlrunner.html
@@ -156,11 +156,11 @@
     <div class="overlay" id="iosOverlay">
         <div class="alert-card">
             <div class="alert-title">打開設定</div>
-            <div class="alert-msg">打開 “VPN與裝置管理” 設定</div>
+            <div class="alert-msg">URL無效，請從主畫面打開系統設定</div>
             
-            <a href="prefs:root=General&path=ManagedConfigurationList" class="btn-liquid" id="liquidBtn" onclick="handleLinkClick()">
+            <a href="" class="btn-liquid" id="liquidBtn" onclick="handleLinkClick()">
                 <div class="specular-layer"></div>
-                打開
+                請手動打開
             </a>
             <button class="btn-close" onclick="closeModal()">關閉</button>
         </div>
